<resources>
    <string name="app_name">Mind</string>
    <string name="toolbar_title">Мои дела</string>
    <string name="demo_subtitle">Выполнено — 0</string>
    <string name="subtitle">Выполнено — %1$d</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="edit_todo_hint">Что надо сделать…</string>
    <string name="importance">Важность</string>
    <string name="importance_title_demo">Нет</string>
    <string name="deadline_demo">21 июня 2024</string>
    <string name="save">Сохранить</string>
    <string name="do_until">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="importance_no">Нет</string>
    <string name="importance_low">Низкий</string>
    <string name="importance_high">Высокий</string>
    <string name="demo_date_text">дата</string>
    <string name="cancel">Отмена</string>
    <string name="apply">Применить</string>
    <string name="back_button">Вернуться назад</string>
    <string name="create_new_task">Добавить новое дело</string>
    <string name="importance_icon_desc">Иконка важности дела</string>
    <string name="icon_info_desc">Информация о деле</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="pick_theme">Выберите тему</string>
    <string name="always_light">Всегда светлая</string>
    <string name="always_dark">Всегда тёмная</string>
    <string name="system">Как в системе</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>