<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/app_background"
    tools:context=".ui.fragments.TodoItemsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:fitsSystemWindows="true"
        android:background="@color/app_background"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/toolbar_title"
            app:expandedTitleMarginStart="@dimen/title_margin_start"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:titleTextColor="@color/toolbar_title"
                app:menu="@menu/home_toolbar_menu"
                app:layout_collapseMode="pin"/>

            <TextView
                android:id="@+id/tasks_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_subtitle"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/title_margin_start"
                android:textColor="@color/toolbar_title"
                app:layout_collapseMode="parallax"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/shape_rounded"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/ic_add_bgcolor"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/create_new_task" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>