<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background"
    tools:context=".EditTodoItemFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_todo_hint"
                android:layout_marginTop="@dimen/todo_text_margintop"
                android:layout_marginStart="@dimen/edit_fragment_margin"
                android:layout_marginEnd="@dimen/edit_fragment_margin"
                android:padding="@dimen/todo_text_padding"
                app:boxBackgroundMode="none"
                android:minHeight="@dimen/todo_text_height"
                android:background="@drawable/shape_rounded"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:background="@drawable/shape_rounded"
                    android:padding="@dimen/todo_text_padding"
                    android:gravity="top"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/importance_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_fragment_margin"
                android:layout_marginStart="@dimen/edit_fragment_margin"
                android:layout_marginEnd="@dimen/edit_fragment_margin"
                android:textSize="@dimen/importance_textsize"
                android:text="@string/importance"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textField"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/importance_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edit_fragment_margin"
                android:layout_marginEnd="@dimen/edit_fragment_margin"
                android:text="@string/importance_title_demo"
                app:layout_constraintTop_toBottomOf="@+id/importance_label"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>